2010-02-07  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Fixed the bug that --file-allocation=falloc doesn't work with
	single file download.
	* src/AbstractSingleDiskAdaptor.cc

2010-02-03  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Release 1.8.2

2010-02-03  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added Portuguese translation. Updated Ukrainian and Spanish
	translation. Thanks to all translators.
	* po/LINGUAS
	* po/es.po
	* po/pt.po
	* po/uk.po

2010-02-03  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Remove fragment from redirected URI.
	* src/Request.cc
	* test/RequestTest.cc

2010-02-03  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Updated po templates.
	* po/aria2.pot

2010-02-02  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Drop legacy ifdef for ares support and code cleanup.
	* src/AsyncNameResolver.cc
	* src/AsyncNameResolver.h

2010-02-02  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Call ares_library_init and ares_library_cleanup if they are
	available. Some code cleanups.
	* src/Platform.cc

2010-02-02  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Call ares_process_fd() each time after epoll to handle timeout.
	* src/EpollEventPoll.cc
	* src/EpollEventPoll.h

2010-01-31  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Suppressed type-cast compiler warning
	* src/CookieStorage.cc

2010-01-31  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Fixed compile error on Mac OS X.
	* src/CookieStorage.h

2010-01-31  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Removed cookietest.txt from Makefile.am
	* test/Makefile.am

2010-01-31  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Updated version number in man page.
	* doc/aria2c.1.txt

2010-01-31  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Rewritten help message for --allow-overwrite option.
	* doc/aria2c.1.txt
	* src/usage_text.h
